testfx/errors/error_tests/edge_32_multiple_X.fx
// 多个无效的 X> 语法
A> println("A>")
B> println("B> outside loop")
C> println("C>")
D> println("D>")
E> println("E>")
F> println("F>")
G> println("G>")
H> println("H>")
I> println("I>")
J> println("J>")
K> println("K>")
M> println("M>")
O> println("O>")
P> println("P>")
Q> println("Q>")
S> println("S>")
U> println("U>")
V> println("V>")
W> println("W>")
X> println("X>")
Y> println("Y>")
Z> println("Z>")
